@@ -8,9 +8,6 @@ import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import javax.imageio.ImageIO;
@@ -35,18 +32,15 @@ public class DefaultImageDecoder implements Decoder<BufferedImage> {
   /**
    * HashSet containing all the mime-types supported by this ImageDecoder instance.
    */
-  private static Set<String> supportedFiles = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(ImageIO.getReaderMIMETypes())));
-
+  private static final Set<String> supportedFiles = Set.of(ImageIO.getReaderMIMETypes());
+  /**
+   * Flag indicating whether or not the Decoder is done decoding and the content has been obtained.
+   */
+  private final AtomicBoolean complete = new AtomicBoolean(false);
   /**
    * Bounds used to rescale the image.
    */
   private int rescale_bounds = CONFIG_BOUNDS_DEFAULT;
-
-  /**
-   * Flag indicating whether or not the Decoder is done decoding and the content has been obtained.
-   */
-  private AtomicBoolean complete = new AtomicBoolean(false);
-
   /**
    * Path to the input file.
    */
